.k8s/base/coursemapper-kg/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
spec:
  ports:
  - port: 80
    targetPort: 80
