.k8s/base/coursemapper-kg/pgadmin/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pgadmin
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: letsencrypt-prod
    traefik.ingress.kubernetes.io/router.middlewares: default-headers@kubernetescrd
spec:
  rules:
  - host: pgadmin.$(FQDN)
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /
        backend:
          service:
            name: pgadmin
            port:
              number: 80
  tls:
  - secretName: pgadmin-tls-certificate
    hosts:
    - pgadmin.$(FQDN)
